2021 and css changes

--- a/css/ravichida.css
+++ b/css/ravichida.css
@@ -5,11 +5,19 @@
 #exp th{
     padding: .40rem;
     font-size: larger;
-    color: #FFFFFF;
+    color: #2c3e50;
 }
 
 #exp td{
     padding: .40rem;
     font-size: normal;
-    color: #FFFFFF;
+    color: #2c3e50;
+}
+
+.text-secondary {
+    color: #2c3e50!important;
+}
+
+ul li.lead{
+    color: #2c3e50!important;
 }
